# VersionTools

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md  project_structure_docs.md  test_git  test_git.cpp  test_parse  test_parse.cpp  test_split  test_split.cpp
.github/workflows/: build-and-release.yml  build.yml  ci.yml  claude.yml  release.yml
Untitled.icon/: icon.json
icons/: AppIcon.icns
logs_46470272892/: 1_Code Quality Check.txt  2_Build Linux.txt  3_Build Windows.txt  4_Build macOS.txt
logs_46470272892/Build Linux/: system.txt
logs_46470272892/Build Windows/: system.txt
logs_46470272892/Build macOS/: system.txt
logs_46470272892/Code Quality Check/: system.txt
logs_46478423469/: 1_Build macOS.txt  2_Build Linux.txt  3_Build Windows.txt  4_Code Quality Check.txt
logs_46478423469/Build Linux/: 16_Post Checkout code.txt  17_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Install dependencies.txt  4_Configure CMake.txt  5_Build.txt  system.txt
logs_46478423469/Build Windows/: 19_Post Install Qt.txt  1_Set up job.txt  20_Post Checkout code.txt  21_Complete job.txt  2_Checkout code.txt  3_Setup MSVC.txt  4_Install Qt.txt  5_Install dependencies.txt  6_Configure CMake.txt  7_Build.txt  system.txt
logs_46478423469/Build macOS/: 18_Post Checkout code.txt  19_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Setup Xcode.txt  4_Install dependencies.txt  5_Configure CMake.txt  6_Build.txt  system.txt
logs_46478423469/Code Quality Check/: 13_Post Setup Python.txt  14_Post Checkout code.txt  15_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Setup Python.txt  4_Install code quality tools.txt  5_Run cpplint.txt  6_Run cppcheck.txt  7_Check code formatting.txt  system.txt
logs_46741862904/: 0_Build macOS.txt  1_Build Windows.txt  2_Code Quality Check.txt  3_Build Linux.txt
logs_46741862904/Build Linux/: 16_Post Checkout code.txt  17_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Install dependencies.txt  4_Configure CMake.txt  5_Build.txt  system.txt
logs_46741862904/Build Windows/: 13_Post Install Qt.txt  14_Post Checkout code.txt  15_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Setup MSVC.txt  4_Install Qt.txt  system.txt
logs_46741862904/Build macOS/: 14_Post Checkout code.txt  15_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Setup Xcode.txt  4_Install dependencies.txt  5_Configure CMake.txt  system.txt
logs_46741862904/Code Quality Check/: 10_Post Checkout code.txt  11_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Install dependencies.txt  4_Check code formatting.txt  5_Run cppcheck.txt  system.txt
logs_46742106210/: 0_Build Windows.txt  1_Code Quality Check.txt  2_Build macOS.txt  3_Build Linux.txt
logs_46742106210/Build Linux/: 16_Post Checkout code.txt  17_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Install dependencies.txt  4_Configure CMake.txt  5_Build.txt  system.txt
logs_46742106210/Build Windows/: 13_Post Install Qt.txt  14_Post Checkout code.txt  15_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Setup MSVC.txt  4_Install Qt.txt  5_Configure CMake.txt  6_Build.txt  system.txt
logs_46742106210/Build macOS/: 14_Post Checkout code.txt  15_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Setup Xcode.txt  4_Install dependencies.txt  5_Configure CMake.txt  6_Build.txt  system.txt
logs_46742106210/Code Quality Check/: 10_Post Checkout code.txt  11_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Install dependencies.txt  4_Check code formatting.txt  5_Run cppcheck.txt  system.txt
logs_46742384866/: 0_Code Quality Check.txt  1_Build Linux.txt  2_Build macOS.txt  3_Build Windows.txt
logs_46742384866/Build Linux/: 16_Post Checkout code.txt  17_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Install dependencies.txt  4_Configure CMake.txt  5_Build.txt  system.txt
logs_46742384866/Build Windows/: 13_Post Install Qt.txt  14_Post Checkout code.txt  15_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Setup MSVC.txt  4_Install Qt.txt  5_Configure CMake.txt  6_Build.txt  system.txt
logs_46742384866/Build macOS/: 14_Post Checkout code.txt  15_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Setup Xcode.txt  4_Install dependencies.txt  5_Configure CMake.txt  6_Build.txt  system.txt
logs_46742384866/Code Quality Check/: 10_Post Checkout code.txt  11_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Install dependencies.txt  4_Check code formatting.txt  5_Run cppcheck.txt  system.txt
src/core/: CMakeLists.txt  GitManager.cpp  GitManager.h  GitTypes.h  GitUtils.cpp  GitUtils.h  SystemCommand.cpp  SystemCommand.h
src/macos/: CMakeLists.txt  ContentView.swift  VersionToolsApp.swift  main.swift
src/macos/Models/: GitManagerWrapper.swift
src/macos/Utils/: GitBridge-Bridging-Header.h  GitBridge.cpp  GitBridge.h  GitBridge.mm
src/macos/Views/: BranchesView.swift  ChangesView.swift  Dialogs.swift  DiffView.swift  HistoryView.swift  PlaceholderViews.swift  RemotesView.swift  SidebarView.swift  StashView.swift  TagsView.swift
src/qt/: CMakeLists.txt  VersionToolsMainWindow.cpp  VersionToolsMainWindow.h  main.cpp
src/qt/dialogs/: SettingsDialog.cpp  SettingsDialog.h
src/qt/utils/: GitWorker.cpp  GitWorker.h  ThemeManager.cpp  ThemeManager.h
src/qt/widgets/: BranchesWidget.cpp  BranchesWidget.h  ChangesWidget.cpp  ChangesWidget.h  HistoryWidget.cpp  HistoryWidget.h  SidebarWidget.cpp  SidebarWidget.h
